<resources>
    <string name="app_name">Дневник</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_results">ResultsActivity</string>

    <string name="table">Табель успеваемости</string>
    <string name="results">Итоги</string>
    <string name="about">О приложении</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="lesson">ПРЕДМЕТ</string>
    <string name="hw">ЗАДАНИЕ</string>
    <string name="mark">ОЦЕНКА</string>
    <string name="one">  I</string>
    <string name="two"> II</string>
    <string name="three">III</string>
    <string name="four">IV</string>
    <string name="year">Г</string>
    <string name="res">И</string>

    <string name="loading">Загрузка…</string>
    <string name="accept">Подтвердите действие</string>
    <string name="accept_2">Вы действительно хотите выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="about_desc">Мобильное приложение для электронного дневника\n\n Разработчик: Nitron Apps\n help@nitronapps.ru\n\n Версия 1.2.6\n2019 г.</string>
    <string name="version">Версия 1.2.6\nNitron Apps. 2019 г.</string>
    <string name="hello">Добро пожаловать!\n Введите логин и пароль:</string>
    <string name="login">ВОЙТИ</string>
    <string name="prev">\u0020\u0020ПРЕДЫДУЩАЯ НЕДЕЛЯ\u0020\u0020</string>
    <string name="next">\u0020\u0020СЛЕДУЮЩАЯ НЕДЕЛЯ\u0020\u0020</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="student">Ученик</string>
    <string name="parent">Родитель</string>
    <string name="parent_name">Родитель:</string>
    <string name="changeUser">Выберите аккаунт:</string>

    <string name="error_connection">Ошибка соединения. Повторите снова.</string>
    <string name="error_login">Неправильный логин или пароль.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_privacy_policy">Политика конфиденциальности</string>
    <string name="check_year">Выберите год обучения:</string>
    <string name="year_of_study">Год обучения</string>
    <string name="error_load_departments">Не удалось загрузить года обучения. Перезапустите приложение.</string>
    <string name="notification">Уведомление</string>
    <string name="continue_accept">Для продолжения примите условия использования приложения.</string>
    <string name="agree_privacy_policy">Я принимаю <u><b>Политику Конфиденциальности</b></u></string>
    <string name="agree_data_policy">Я соглашаюсь с тем, что приложение хранит <u><b>следующие данные</b></u></string>
    <string name="using_data">Используемые данные</string>
    <string name="using_data_description">Приложение хранит ваш логин, пароль и уникальные идентификаторы для сайта https://elschool.ru/ в зашифрованном виде и использует их для своей работы.</string>
    <string name="default_notification_channel_id">nitron_apps_chanel</string>
    <string name="balance">Баланс карты</string>

</resources>
